Add incorrect day input notification and testing